# qa-department

./: .coverage  .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  MASTER-PROMPT.md  Makefile  README.md  coverage.json  coverage.xml  pyproject.toml
agents/: ada-audit.sh  compliance-audit.sh  fix-bugs.sh  monetization-audit.sh  product-audit.sh  qa-scan.sh  seo-audit.sh  watch.sh
backoffice/: __init__.py  __main__.py  aggregate.py  api_server.py  config.py  delivery.py  log_config.py  regression.py  scaffolding.py  server.py  setup.py  tasks.py  workflow.py
config/: agent-runner.env.example  backoffice.codebuild.example.yaml  backoffice.example.yaml  qa-config.example.yaml  qa-config.yaml  targets.example.yaml
dashboard/: ada-data.json  ada.html  admin.html  analogify.html  back-office-hq.html  backoffice.html  chromahaus.html  cloud-ops-data.json  compliance-data.json  compliance.html  data.json  docs-content.html  documentation-cicd.html  documentation-cli.html  documentation-github.html  documentation.html  faq-content.html  faq.html  index-new.html  index.html  jobs.html  metrics.html  monetization-data.json  monetization.html  org-data.json  privacy-data.json  privacy.html  product-data.json  product.html  qa-data.json  qa.html  regression-data.json  regression.html  score-history.json  selah.html  self-audit-data.json  self-audit.html  seo-data.json  seo.html  site-branding.js  (+2 more)
docs/: CICD-REFERENCE.md  CLI-REFERENCE.md  COMPLIANCE-CONTROLS.md  HANDOFF.md  LIVE-URLS.md  WORKFLOW-ARCHITECTURE.md  portfolio-engineering-standard.md
lib/: severity-levels.md
(+85 files in other folders)
