[project]
name = "backoffice"
version = "1.0.0"
dependencies = [
    "PyYAML>=6.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["backoffice"]

[tool.coverage.report]
show_missing = true
